Notifications, comments and fixed login endpoint
