# app/requests/notification.request.go
@@ -1,0 +1,5 @@
+package requests
+
+type NotificationRequest struct {
+	Message    string   `json:"message"`
+}
